2002-12-31  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/Automake/ChannelDefs.pm: New file.
	* lib/Automake/Makefile.am (dist_perllib_DATA): Add ChannelDefs.pm.
	* automake.in: Move all "register_channel" calls to ChannelDefs.pm.
	(prog_error, error, fatal, verb, switch_warning, parse_WARNINGS,
	parse_warnings): Move to ChannelDefs.pm.
	(usage): Move the warning list to Automake::ChannelDefs::usage
	and call it.
	(set_strictness): Move channel setings to
	Automake::ChannelDefs::set_strictness and call it.

	* automake.in (err): Rename as ...
	(error): ... this.  Adjust all callers.
	Suggested by H.Merijn Brand.

2002-12-13  Alexandre Duret-Lutz  <adl@gnu.org>

	* tests/version7.test: Require GNU make.
	Reported by Patrick Welche.

2002-12-11  Brian Ford  <ford@vss.fsi.com>

	* m4/init.m4 (AM_INIT_AUTOMAKE): Properly quote AC_PACKAGE_TARNAME
	and AC_PACKAGE_VERSION.

2002-12-11  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.texi (ANSI): Since Autoconf 2.54, LIBOBJ and LTLIBOBJ
	no longer have to be rewritten in order to support deansification.
	(Tests): Link to the DejaGnu manual.
	(Optional): Comment out FIXME.
	(Complete, A Library, LIBOBJS): Use $(LIBOBJ) and $(ALLOCA)
	instead of @LIBOBJ@ and @ALLOCA@.
	(Sources): Typo.

2002-12-05  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/am/texinfos.am (install-info-am, uninstall-info-am): Strip
	directories from info filenames.
	* tests/texinfo13.test: Make sure main.info gets installed
	as $(infodir)/main.info.

	* automake.in (handle_dist): Do not define %GETTEXT% if the user
	is using $seen_gettext_external, this distcheck won't run
	`./configure' with a meaningless `--with-included-gettext'.
	* tests/gettext.test: Make sure distcheck uses --with-included-gettext.
	* tests/gettext2.test: Make sure distcheck does not use
	--with-included-gettext.

	* m4/ccstdc.m4: Define am_cv_prog_cc_stdc for backward
	compatibility and diagnose the use of AM_PROG_CC_STDC.
	* automake.texi (Public macros) <AM_PROG_CC_STDC>: Remove