@@ -75,6 +75,7 @@ H.Merijn Brand		h.m.brand@hccnet.nl
 Harlan Stenn		Harlan.Stenn@pfcs.com
 Henrik Frystyk Nielsen	frystyk@w3.org
 Ian Lance Taylor	ian@cygnus.com
+Imacat			imacat@mail.imacat.idv.tw
 Inoue			inoue@ainet.or.jp
 James Henstridge	james@daa.com.au
 James Youngman		jay@gnu.org
