@@ -1,5 +1,5 @@
 #! /bin/sh
-# Copyright (C) 2001, 2002  Free Software Foundation, Inc.
+# Copyright (C) 2001, 2002, 2003  Free Software Foundation, Inc.
 #
 # This file is part of GNU Automake.
 #
@@ -41,5 +41,5 @@ END
 : > config.guess
 : > config.sub
 
-$ACLOCAL -I $aclocaldir || exit 1
+$ACLOCAL || exit 1
 $AUTOMAKE
