@@ -1,5 +1,5 @@
 #! /bin/sh
-# Copyright (C) 1999, 2001, 2002  Free Software Foundation, Inc.
+# Copyright (C) 1999, 2001, 2002, 2003  Free Software Foundation, Inc.
 #
 # This file is part of GNU Automake.
 #
@@ -46,7 +46,7 @@ END
 
 set -e
 
-$ACLOCAL -I $aclocaldir || exit 1
+$ACLOCAL || exit 1
 $AUTOMAKE -a
 
 grep -c '^\.c\.o:' Makefile.in   | grep '^1$'
