@@ -832,12 +832,12 @@
 
 2001-10-21  Akim Demaille  <akim@epita.fr>
 
-	* tests/defs (ACLOCAL): Point to the installed aclocaldir is
+	* tests/defs (ACLOCAL): Point to the installed aclocaldir if
 	libtool is required.
 	* tests/lex.test: Run AC_INIT once.
 	* tests/ldflags.test, tests/listval.test, tests/suffix2.test:
 	Libtool is required.
-	* tests/header.test: Built a correct configure.in.
+	* tests/header.test: Build a correct configure.in.
 	* tests/defun2.test (configure.in): Be a bit respectful with
 	Autoconf, close the macro invocations.
 	* tests/confdeps.test: Even when not using aclocal, aclocal.m4
@@ -4931,7 +4931,7 @@
 
 -----
 
-Copyright 2001 Free Software Foundation, Inc.
+Copyright (C) 2001, 2003  Free Software Foundation, Inc.
 
 This file is part of GNU Automake.
 
