@@ -1,3 +1,12 @@
+2003-01-05  Alexandre Duret-Lutz  <adl@gnu.org>
+
+	* tests/defs.in: Substitute aclocaldir instead of running
+	the installed aclocal.  Otherwise Libtool and Gettext
+	tests get skipped when aclocal doesn't preexist.
+	Reported by Imacat.
+	* tests/listval.test, tests/suffix2.test: Remove pointless -I
+	argument to aclocal.
+
 2002-12-31  Alexandre Duret-Lutz  <adl@gnu.org>
 
 	* lib/Automake/ChannelDefs.pm: New file.
@@ -3219,7 +3228,7 @@
 
 -----
 
-Copyright (C) 2002 Free Software Foundation, Inc.
+Copyright (C) 2002, 2003  Free Software Foundation, Inc.
 
 This file is part of GNU Automake.
 
